comment out the npmrc

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-registry=https://registry.npmjs.org/
-_auth=YWltaGlnaC5leGNlbDpNOEhCRlp2NEo0VktpTFA
---always-auth=true
-email=rnd@prospecta.com
+# registry=https://registry.npmjs.org/
+# _auth=YWltaGlnaC5leGNlbDpNOEhCRlp2NEo0VktpTFA
+# --always-auth=true
+# email=rnd@prospecta.com
